# varys

./: .gitignore  README.md  interior.py  pyproject.toml  simple.py  tox.ini
.github/workflows/: pytest.yaml
tests/: test_varys.py
tests/unit/: test_modelos.py  test_varys.py
varys/: __init__.py  modelos.py
varys/personas/: diputado.py
varys/spiders/: congreso_opendata.py
varys/spiders/subsecretarias/: interior.py
