[tool.poetry]
name = "varys"
version = "0.1.0"
description = ""
authors = ["Mario Hernandez <mariofix@pm.me>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
