[tool.poetry]
name = "varys"
version = "0.1.0"
description = ""
authors = ["Mario Hernandez <mariofix@pm.me>"]
license = "MIT"
readme = "README.md"
homepage = "http://mariofix.github.io/varys"
repository = "http://github.com/mariofix/varys"
documentation = "http://mariofix.github.io/varys/docs"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.24.0"
dataclasses = { version = "*", python = "3.6" }
zeep = "^3.4.0"
columnar = "^1.3.1"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
black = "^20.8b1"
tox = "^3.20.0"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
